--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fb-chat-api",
-  "version": "10.4.1",
+  "version": "10.4.2",
   "description": "A Facebook chat API that doesn't rely on XMPP. Will NOT be deprecated after April 30th 2015.",
   "scripts": {
     "test": "mocha",
@@ -41,36 +41,29 @@
   },
   "eslintConfig": {
     "env": {
-      "es6": true,
-      "es2017": true,
+      "commonjs": true,
+      "es2021": true,
       "node": true
     },
     "extends": "eslint:recommended",
     "parserOptions": {
-      "sourceType": "module"
+      "ecmaVersion": 13
     },
     "rules": {
-      "linebreak-style": [
-        "error",
-        "unix"
-      ],
-      "semi": [
-        "error",
-        "always"
-      ],
-      "no-unused-vars": [
-        1,
-        {
-          "argsIgnorePattern": "^_",
-          "varsIgnorePattern": "^_"
-        }
-      ],
-      "no-empty": [
-        "error",
-        {
-          "allowEmptyCatch": true
-        }
-      ]
+      "no-prototype-builtins": 0,
+      "no-unused-vars": 1,
+      "comma-dangle": 1,
+      "no-redeclare": 0,
+      "prefer-const": 1,
+      "no-useless-escape": 0,
+      "no-mixed-spaces-and-tabs": 0,
+      "semi": 1,
+      "no-useless-catch": 0,
+      "no-empty": 0,
+      "use-isnan": 0,
+      "no-extra-semi": 1,
+      "no-async-promise-executor": 0,
+      "no-unreachable": 1
     }
   }
 }
