--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "websocket-stream": "^5.5.0"
   },
   "engines": {
-    "node": ">=10.x"
+    "node": ">=14.x"
   },
   "devDependencies": {
     "eslint": "^7.5.0",
     "mocha": "^7.0.1",
-    "prettier": "^1.11.1"
+    "prettier": "^1.11.1",
+    "puppeteer": "^15.5.0"
   },
   "eslintConfig": {
     "env": {
@@ -65,8 +66,8 @@
       "no-extra-semi": 1,
       "no-async-promise-executor": 0,
       "no-unreachable": 1,
-			"valid-typeof": 0,
-			"no-case-declarations": 0
+      "valid-typeof": 0,
+      "no-case-declarations": 0
     }
   }
 }
