--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"https-proxy-agent": "^4.0.0",
-		"mqtt": "^3.0.0",
+		"mqtt": "4.3.7",
 		"npmlog": "^1.2.0",
 		"request": "^2.53.0",
 		"websocket-stream": "^5.5.0"
